objects/test1__c.object
<CustomObject>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Unique Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id</inlineHelpText>
        <label>Unique Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active_lookup__c</fullName>
        <label>active lookup</label>
        <referenceTo>test__c</referenceTo>
        <relationshipLabel>test1</relationshipLabel>
        <relationshipName>test1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inactive_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>inactive lookup</label>
        <referenceTo>test__c</referenceTo>
        <relationshipLabel>test1 (inactive lookup)</relationshipLabel>
        <relationshipName>test11</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>test1</label>
    <nameField>
        <label>test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>